# local-reasoning-demo

./: .gitignore  README.md  config.py  data.py  evaluate.py  inference.py  pyproject.toml  rewards.py  train.py  utils.py
